--- a/static/css/base.css
+++ b/static/css/base.css
@@ -188,14 +188,44 @@ a.nav-link:hover,
     margin-top: 10rem;
 }
 
+.info-container {
+    position: relative;
+    text-align: center;
+}
+
+.info-container .img-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
 /* ---------------------- FOOTER ---------------------- */
+
 .footer-top h4 {
     padding-top: .9rem;
+}
+
+.footer-bottom h5 {
+    text-decoration: underline;
 }
 
 .footer-bottom a {
     color: #fff;
     text-decoration: none;
+}
+
+.footer-bottom ul {
+    position: relative;
+    display: flex;
+    list-style: none;
+    padding-left: 0rem!important;
+}
+
+.footer-bottom i {
+    font-size: 1rem;
+    margin-right: 1rem;
 }
 
 .form-group.subscribe {
@@ -270,6 +300,21 @@ a.nav-link:hover,
     }
 }
 
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+    .footer-bottom h5 {
+        padding-top: 1rem;
+    }
+
+    .footer-bottom {
+        margin-top: 0rem!important;
+    }
+
+    .footer-bottom p:last-child {
+        margin-bottom: 0rem!important;
+    }
+}
+
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
     #main-nav a.nav-link {
@@ -316,6 +361,31 @@ a.nav-link:hover,
         font-size: .9rem;
         padding-left: .9rem;
         padding-right: .9rem;
+    }
+}
+
+/* MEDIA QUERIES LANDSCAPED PHONES */
+
+@media only screen and (min-width: 279px) and (max-width: 736px) and (orientation: landscape) {
+    #delivery-banner h4 {
+        font-size: 1rem;
+    }
+
+    #main-nav a.nav-link {
+        font-size: 1rem;
+        padding-top: .4rem;
+        padding-bottom: .4rem;
+    } 
+}
+
+@media only screen and (min-width: 375px) and (max-width: 823px) and (orientation: landscape) {
+    #delivery-banner h4 {
+        font-size: 1rem;
+    }
+    #main-nav a.nav-link {
+        font-size: 1rem;
+        padding-top: .4rem;
+        padding-bottom: .4rem;
     }
 }
 
@@ -554,8 +624,16 @@ input[type=number] {
 
 .shop-now-button:hover,
 .shop-now-button:active,
-.shop-now-button:focus{
+.shop-now-button:focus {
     background: #764c87;
+    color: #fff;
+    transition: .4s ease-in-out;
+}
+
+#myBtn:hover,
+#myBtn:active,
+#myBtn:focus {
+    background: #444;
     color: #fff;
     transition: .4s ease-in-out;
 }
@@ -651,4 +729,44 @@ select option[value=""] {
 
 .border-0 {
     border: 0!important;
+}
+
+/* --------------KEYFRAMES--------------- */
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+
+/* ---------------------- BORROWED CODE ---------------------- */
+
+/* Code borrowed from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_scroll_to_top */
+/* Back to top btn */
+#myBtn {
+    display: none;
+	position: fixed;
+    padding-left: .5rem;
+    padding-right: .5rem;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	border: none;
+    border-radius: 50%;
+	outline: none;
+	background-color: #333;
+    color: rgba(255, 255, 255, 0.699);
+	cursor: pointer;
+	font-size: 1.5rem;
+    box-shadow: 0px 7px 8px -6px rgba(0,0,0,0.79);
+    animation: fadeIn 1s ease-in-out;
+    animation-iteration-count: 1;
+}
+#myBtn i {
+    padding-bottom: .5rem;
 }
