--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,10 +1,9 @@
-.bg-shopnow {
-    background-color: #fff;
-}
+
+
+/* ---------------------- HERO SECTION ---------------------- */
 
 .hero-container h1 {
     font-weight: 700;
-    
 }
 
 .hero-container p:first-child {
@@ -15,6 +14,8 @@
     font-family: 'Pacifico', sans-serif;
     color: #222!important;
 }
+
+/* ---------------------- CAROUSEL ---------------------- */
 
 .carousel {
     padding-left: 0px;
@@ -32,6 +33,8 @@
     color: #fff;
     text-align: center;
 }
+
+/* ---------------------- SHOPNOW SECTION ---------------------- */
 
 .shopnow-container {
     margin: 0 auto;
@@ -57,7 +60,6 @@ a#shopnow {
 #shopnow-inner {
     position: relative;
     background-color: #333;
-    /* border-radius: 15px; */
     width: 100%;
     height: 100%;
     margin: 0 auto;
@@ -65,7 +67,7 @@ a#shopnow {
     box-shadow: 8px 5px 18px -3px rgba(0,0,0,0.70);
 }
 
-#shopnow-inner h1 {
+#shopnow-inner h3 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -81,12 +83,11 @@ a#shopnow {
     transform: translate(-50%, -50%);
     height: 85%;
     width: 90%;
-    /* border-radius: 15px; */
     opacity: 0;
     background-color: rgba(51, 51, 51, 0.849);
 }
 
-.middle h1 {
+.middle h3 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -97,6 +98,10 @@ a#shopnow {
 .middle:hover {
     transition: .5s ease-in-out;
     opacity: 1;
+}
+
+.bg-shopnow {
+    background-color: #fff;
 }
 
 /* ---------------------- MEDIA QUERIES ---------------------- */
@@ -128,7 +133,7 @@ a#shopnow {
         height: 3rem;
     }
 
-    .middle h1 {
+    .middle h3 {
         font-size: 1.2rem;
     }
 
@@ -231,12 +236,36 @@ a#shopnow {
     .hero-logo {
         font-size: 8rem;
     }
+    
     #shopnow {
         min-height: 20rem;
     }
 
-
-    .middle h1 {
+    .middle h3 {
         font-size: 2.5rem;
+    }
+}
+
+/* MEDIA QUERIES LANDSCAPED PHONES */
+
+@media only screen and (min-width: 279px) and (max-width: 736px) and (orientation: landscape) {
+    .hero-container p:first-child {
+        padding-top: 9rem;
+    }
+    
+    /* REMOVED MARGIN FROM SHOP-NOW-BUTTON */
+    .hero-container .my-5 {
+        margin: 0rem!important;
+    }
+}
+
+@media only screen and (min-width: 375px) and (max-width: 823px) and (orientation: landscape) {
+    .hero-container p:first-child {
+        padding-top: 9rem;
+    }
+
+    /* REMOVED MARGIN FROM SHOP-NOW-BUTTON */
+    .hero-container .my-5 {
+        margin: 0rem!important;
     }
 }
